service template, geojson, etc

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'template/main.html' %}
 {% block body %}
-    <div style="height: calc(100% - 56px);width:100%;">
+    <div class="map-container">
         <div id="map"></div>
         <div id="detail-info" class="jumbotron mt-3">
             <h1></h1>
