--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,8 @@
     <div class="map-container">
         <div id="map"></div>
         <div id="detail-info" class="jumbotron mt-3">
+            <div class="row">
+            <div class="col-md-8">
             <h1></h1>
             <p class="lead">
                 <span class="address"></span><br>
@@ -12,6 +14,9 @@
             Reported at: <span class="reported"></span></br>
             Occured: <span class="occured"></span>
             </p>
+            </div>
+            <div class="col-md-4"><div id="pano" style="width:100%;height:200px;"></div></div>
+            </div>
             <a class="btn btn-sm btn-primary" href="#" target="_blank" role="button">Find Article »</a>
         </div>
     </div>
